# CS121-A3

./: IndexMain.py  README.txt  TEST.txt  TFIDF.py  combineIndex.py  main.py  parseDocs.py  pyproject.toml  searchMain.py  storeIndex.py  tokenizer.py
