[tool.poetry]
name = "repl_nix_CS121-A3"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
lxml = "^4.9.2"
nltk = "^3.8.1"
numpy = "^1.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
